gccida/g1/dwarf2out_frame_debug_expr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1790:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1309, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1791:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int16 *)expr[1]; 
                 ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1792:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)expr->fld[0]; 
                      ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1796:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1603, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1798:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1479, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1808:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1528, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1823:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1549, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1842:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1513, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1851:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1555, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1858:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1490, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1861:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1495, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1881:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1538, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1895:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1588, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1927:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1561, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1937:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1457, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1957:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1386, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1963:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1399, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1973:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1404, "dwarf2out_frame_debug_expr"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/dwarf2out.c:1979:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1442, "dwarf2out_frame_debug_expr"); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug_expr/src/obj/dwarf2out.o] Error 1
